<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:key="@string/campaign_mode_pref_key"
        android:title="@string/campaign_mode"
        android:summary="@string/campaign_mode_summary"/>

    <Preference
        android:fragment="com.example.scythecompanion.FactionSettingsFragment"
        android:icon="@drawable/faction_front_icon"
        android:key="@string/factions_preference_key"
        android:summary="@string/factions_summary"
        android:title="@string/factions_header" />
    <Preference
        android:fragment="com.example.scythecompanion.PlayerMatSettingsFragment"
        android:icon="@drawable/playermat_front_icon"
        android:key="@string/playermats_preference_key"
        android:title="@string/playermats_header"
        android:summary="@string/playermats_summary"/>
    <Preference
        android:icon="@drawable/image_expansions"
        android:fragment="com.example.scythecompanion.ExpansionSettingsFragment"
        android:key="@string/expansions_preference_key"
        android:title="@string/expansions_header"
        android:summary="@string/expansions_summary"/>
</PreferenceScreen>