<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/expansions_header">
        <SwitchPreferenceCompat
            android:key="@string/invaders_from_afar_preference_key"
            android:title="@string/invaders_from_afar"
            android:persistent="true"
            android:defaultValue="false"/>
        <SwitchPreferenceCompat
            android:key="@string/rise_of_fenris_preference_key"
            android:title="@string/rise_of_fenris"
            android:persistent="true"
            android:defaultValue="false"
            android:summary="@string/spoiler_alert"/>
        <SwitchPreferenceCompat
            android:key="@string/modular_board_key"
            android:title="@string/modular_board"
            android:persistent="true"
            app:defaultValue="false"
            android:summary="@string/modular_board_summary"/>
    </PreferenceCategory>
</PreferenceScreen>