<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.scythecompanion.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_24"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_reset_players"
        android:title="@string/reset_players"
        android:orderInCategory="200"
       />
    <item
        android:id="@+id/action_reset_factions"
        android:title="@string/reset_factions"
        android:orderInCategory="300"
        />
    <item
        android:id="@+id/action_reset_playermats"
        android:title="@string/reset_playermats"
        android:orderInCategory="400"
        />
</menu>